# glURDF

./: CMakeLists.txt  LICENSE.md  README.md
includes/learnopengl/: mesh.h  model.h
resources/configs/: bridge  fetch_say_hi  ground  stairs  talos_say_hi
resources/iiwa_description/urdf/: iiwa7.urdf
resources/objects/: box.stl  cylinder.stl  sphere.stl
resources/planning/: talos_bridge.py  talos_bridge_path.py  talos_ground.py  talos_ground_path.py  talos_stairs.py  talos_stairs_path.py
resources/scenes/: bridge.stl  ground.stl  stairs.stl
resources/talos_data/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
resources/talos_data/config/: collision_parameters.yaml  default_configuration_half_sitting.yaml  default_configuration_hanging.yaml  default_configuration_locomotion.yaml  default_configuration_zeros.yaml  joint_limits.yaml  pids_spring.yaml  pids_stiff.yaml  rviz.rviz  talos_plotjuggler.xml
resources/talos_data/srdf/: pyrene.srdf  talos_wpg.srdf
resources/talos_data/urdf/: materials.urdf.xacro  pyrene.urdf  talos_full_common.urdf.xacro  talos_full_v2.urdf.xacro  talos_reduced.urdf  talos_reduced_v2.urdf  talos_reduced_wpg.urdf
resources/talos_data/urdf/arm/: arm_v1.urdf.xacro  arm_v2.urdf.xacro  left_arm.transmissions.urdf.xacro  left_wrist.transmissions.urdf.xacro  right_arm.transmissions.urdf.xacro  right_wrist.transmissions.urdf.xacro  wrist.urdf.xacro
resources/talos_data/urdf/crane/: crane.urdf.xacro
resources/talos_data/urdf/gripper/: gripper.transmission.xacro  gripper.urdf.xacro
resources/talos_data/urdf/head/: head.urdf.xacro
resources/talos_data/urdf/leg/: foot_collision_default.urdf.xacro  leg.urdf.xacro  leg_passive.urdf.xacro
resources/talos_data/urdf/sensors/: ftsensor.urdf.xacro  imu.urdf.xacro  orbbec_astra_pro.urdf.xacro
resources/talos_data/urdf/torso/: torso.urdf.xacro
src/: demo_fetch_say_hi.cpp  demo_talos.cpp  demo_talos_say_hi.cpp  glURDF.cpp  point_shadows.fs  point_shadows.vs  point_shadows_depth.vs
