<?xml version="1.0"?>
<package format="2">
  <name>talos_data</name>
  <version>1.2.2</version>
  <description>The talos_data package</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>talos_description_calibration</exec_depend>
  <exec_depend>talos_description_inertial</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>
  <test_depend>roscpp</test_depend>

  <export>
  </export>

</package>
